# imageproc-website

./: Cargo.toml  README.md  justfile  notes.md  package-lock.json  package.json  rustfmt.toml  webpack.config.js
frontend/: index.css  index.html  main.css  main.html  main.js  package-lock.json  package.json  webpack.config.js
frontend/js/: draw_canvases.js  image_proc.js  main.js  raw_image.js  worker.js
frontend/src/: index.js
frontend/wasm/: image_processing_bg.wasm  proc.js  proc_bg.wasm
gamma_images/: Cargo.toml
gamma_images/src/: main.rs
image_processing/: Cargo.toml  LICENSE  README.md
image_processing/benches/: blur.rs  histogram_specification.rs  histograms.rs  pixel_ops.rs  sobel.rs  transpose.rs
image_processing/examples/: edge_detection.rs  histogram_image.rs  test_blur.rs
image_processing/src/: blur.rs  conversion.rs  edge_detection.rs  exposure.rs  histogram.rs  lib.rs  matrix_ops.rs  pixel_ops.rs  window.rs
leptos-ui/: Cargo.toml
leptos-ui/src/: main.rs  views.rs
proc/: Cargo.toml  justfile
proc/src/: lib.rs
www/: index.css  index.html  main.css  main.html
www/wasm/: image_processing.js  image_processing_bg.wasm  package.json  proc.js  proc_bg.wasm
