[package]
name = "image_processing"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
image = { git = "https://github.com/image-rs/image" }
num-traits = "0.2.8"

[dependencies.web-sys]
version = "0.3.27"
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]

[profile.release]
opt-level = "s" 
lto = true