[package]
name = "leptos-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
log = "0.4.21"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "File",
    "FileList",
    "HtmlImageElement",
    # "Canvas",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
]
