[package]
name = "proc"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.56"
js-sys = "0.3.33"
image = "0.22.2"
num-traits = "0.2.8"
image_processing = { path = "../../image-processing" }
wee_alloc = "0.4.5"

[dev-dependencies.web-sys]
version = "0.3.33"
features = [
    'console',
]

[profile.release]
opt-level = 3 
lto = true

# [profile.debug]
# opt-level = 3 
# debug = true