[package]
name = "proc"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.56"
js-sys = "0.3.33"
image = "0.22.2"
num-traits = "0.2.8"
image_processing = { git = "https://github.com/lazypassion/image-processing.git" }
wee_alloc = "0.4.5"

[dev-dependencies.web-sys]
version = "0.3.33"
features = [
    'console',
]

[profile.release]
opt-level = 3 
lto = true