[package]
name = "proc"
version = "0.5.0"
authors = ["arthmis20@gmail.com"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.56"
js-sys = "0.3.33"
image = "0.22.2"
num-traits = "0.2.8"
image_processing = { path = "../image_processing" }
wee_alloc = "0.4.5"

[dev-dependencies.web-sys]
version = "0.3.33"
features = [
    'console',
]

[profile.release]
opt-level = 3 
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 2 
lto = "thin"
codegen-units = 256